# playwright_mcp_python

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/playwright_mcp/: __init__.py  cli.py  context.py  server.py
src/playwright_mcp/tools/: __init__.py  base.py  capture.py  interaction.py  navigation.py  registry.py  utility.py
tests/: conftest.py  test_capture.py  test_interaction.py  test_navigation.py  test_screenshot_pages.py  test_tool_calling.py  test_tools_list.py
